--- a/web/room.css
+++ b/web/room.css
@@ -389,7 +389,7 @@ div.esco {
     cursor: pointer;
     left: 0px;
     top: 2px;
-    font-size: 10px;
+    font-size: 85%;
     font-weight: bold;
     padding: 4px;
     z-index: 10;
@@ -402,7 +402,7 @@ div.esco {
     cursor: default;
     left: 0px;
     top: 2px;
-    font-size: 10px;
+    font-size: 85%;
     font-weight: bold;
     font-color: #999999;
     padding: 4px;
@@ -415,7 +415,7 @@ div.esco {
     border: 1px solid green;
     left: 0px;
     top: 2px;
-    font-size: 10px;
+    font-size: 85%;
     font-color: #333333;
     padding: 4px;
 }
